--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "libressltd/lbform",
+    "name": "vietanh/lform",
     "description": "Form element for reuse",
     "type": "library",
     "require": {
@@ -8,13 +8,13 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "libre ss ltd",
-            "email": "contact@libreteam.com"
+            "name": "vietanh",
+            "email": "tavietanh74@gmail.com"
         }
     ],
     "autoload": {
         "psr-4": {
-            "LIBRESSLtd\\LBForm\\": "src/"
+            "Vietanh\\LForm\\": "src/"
         },
         "classmap": ["src/controllers", "src/traits"]
     },
